src/components/people-section.module.css
.whoContainer {
  flex-direction: column;
  display: flex;
  justify-content: flex-start;
  height: auto;
  letter-spacing: normal;
}

.whoPerson:nth-child(even) {
  flex-direction: row-reverse;
}

.whoPerson {
  display: flex;
  flex: 1;
  flex-wrap: wrap;
  flex-direction: row;
  color: rgba(0, 0, 0, 1);
  position: relative;
}

.contactInfo {
  padding: 20px 36px;
  align-items: flex-start;
  justify-content: flex-end;
  display: flex;
  flex-direction: column;
  flex: 1;
}

.contactInfoContainer {
  min-width: 165px;
  flex: 2;
  display: flex;
}

.contactInfoSpacer {
  flex: 1;
}

.contactName {
  text-align: center;
  font-weight: bold;
  margin: 0;
}

.contactInfoText {
  margin: 0px 0px;
}

.headShot {
  flex: 1;
  position: relative;
}

.mobileHeadShotImage {
  display: none;
}

.headShotImage {
  flex: 1;
  background-size: cover;
  background-position: center;
  filter: saturate(70%);
  display: block;
}

.distanceShot {
  position: relative;
  flex: 2;
}

.distanceShotImage {
  flex: 1;
}
.distanceShotOverlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(190, 190, 190, 0.5);
  display: flex;
}

.contactInfoWrapper {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
}

@media only screen and (max-width: 420px) {
  .distanceShot {
    display: none;
  }
  .headShotImage {
    display: none;
  }
  .mobileHeadShotImage {
    flex: 1;
    background-size: cover;
    background-position: center;
    filter: saturate(70%);
    display: block;
  }

  .contactInfo {
    color: white;
    padding: 15px;
  }

  .contactInfoSpacer {
    flex: 0;
  }
}

